Dark mode fix

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
   
   .modal-content {
     position: relative;
-    background-color: #fefefe;
+    background-color: var(--background);
     margin: auto;
     border: 1px solid #888;
     width: 80%;
